# ClientServerApp

./: .gitignore  CMakeLists.txt  README.md
ClientApp/: client.py
ServerApp/: CMakeLists.txt
ServerApp/src/: ConfigManager.cpp  ConfigManager.hpp  Server.cpp  Server.hpp  Stats.cpp  Stats.hpp  main.cpp
ServerApp/test/: TestConfig.cpp  TestStats.cpp
